Fixed some wild behaviours :)

--- a/NebBackEnd/.gitignore
+++ b/NebBackEnd/.gitignore
@@ -1,6 +1,5 @@
 # Logs
 logs
-log.txt
 *.log
 npm-debug.log*
 
@@ -41,3 +40,6 @@ typings
 # .NET compiled files
 bin
 obj
+
+# local sqlite db that is auto generated
+LocalDatabase.db
