--- a/NebBackEnd/appsettings.json
+++ b/NebBackEnd/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "AppSettings": {
-    "Secret": "Tis but a scratch"
+    "Secret": "TIS BUT A SCRATCH"
   },
   "Logging": {
     "LogLevel": {
